data/all_generated_tests/raw_wast_tests/block_StackCorruption_1877.wast
;; 8. **Test Description**: Construct a block with branching that re-enters a previous scope unexpectedly, ensuring stack values and state are correctly preserved across these re-entries.    - **Constraint**: Tests persistent stack state across various scopes and re-entries.    - **Relation to Stack Corruption**: Incorrect management of stack state could corrupt values when re-entering scopes unexpectedly.

(assert_invalid
  (module (func $test-reenter-scope-stack-corruption (result i32)
    (block (result i32) 
      (i32.const 42)
      (block (br 1)) 
      (drop)
      (i32.const 0)
    )
    (i32.const 1)
  ))
  "type mismatch"
)